--- a/index.html
+++ b/index.html
@@ -270,5 +270,10 @@
 </div>
 
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-58d2047a7cd4face"></script> 
+<div style="position: fixed;bottom: 1px">
+          <div class="container">
+      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
+          </div>
+        </div> 
 </body>
 </html>
