--- a/index.html
+++ b/index.html
@@ -154,7 +154,56 @@
 	</div>
 	<div class="section" id="section2">
 	<h1>More of the work that I have done</h1>
-	<div class="container-fluid">
+
+	<div class="centerDiv">
+<div class="container-fluid">
+	<div class="row">
+	 	<div class="col-sm-3 col-md-3">
+			<ul>
+	<li><button type="button" class="btn btn-info"><a href="chaturbate.com/Assleigh3">Assleigh3</a> </button></li>
+	<br>
+	<li><button type="button" class="btn btn-info"><a href="chaturbate.com/KikiKush">KikiKush</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/barbiela">barbiela</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/NicknTay">NicknTay</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/harlyann93">harlyann93</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/alananala710">alananala710</a> </button></li>
+	</ul>
+		</div>
+	 	<div class="col-sm-3 col-md-3">
+			<ul>
+				<li><button type="button" class="btn btn-info"><a href="chaturbate.com/sweet_sara_26">sweet_sara_26</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/xxhellokitty22xx">xxhellokitty22xx</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/lyannaskye">lyannaskye</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/jewpolian">jewpolian</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/scarlett_hazee">scarlett_hazee</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/sexy_cpl_for_fun_420">sexy_cpl_for_fun_420</a> </button></li>
+			</ul>
+		</div>
+	 	<div class="col-sm-3 col-md-3">
+
+			<ul>
+				<li><button type="button" class="btn btn-info"><a href="chaturbate.com/jvalweaver">jvalweaver</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/beachbabe0891">beachbabe0891</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/wickedwoman1990">wickedwoman1990</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/juicyjulia10">juicyjulia10</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/poppy_foxdale">poppy_foxdale</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/jeweledbeaver">jeweledbeaver</a> </button></li>
+			</ul>
+		</div>
+		<div class="col-sm-3 col-md-3">
+			<ul>
+				<li><button type="button" class="btn btn-info"><a href="chaturbate.com/allykat20">allykat20</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/h2oh">h2oh</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/batmanlover89">batmanlover89</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/ivanabloom">ivanabloom</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/barbiesplayhouse1">barbiesplayhouse1</a> </button></li>
+	<br><li><button type="button" class="btn btn-info"><a href="chaturbate.com/freyjaalunaa">freyjaalunaa</a> </button></li>
+
+			</ul>
+		</div>
+	</div>
+</div>
+	<!-- <div class="container-fluid">
 	<div class="row">
 	 	<div class="col-sm-3 col-md-3">
 			<div>
@@ -182,7 +231,7 @@
 	</div>
 	<div>
 		<a href="">lizzyshaenaughty</a>
-	</div>
+	</div> -->
 	<div style="position: fixed;right: 2%">
 		<a  class="twitter-timeline" data-width="300" data-height="500" href="https://twitter.com/sanaiqbal321">Tweets by sanaiqbal321</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
