--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
 			</ul>
 		</div>
 	</div>
-</div>
+</div></div>
+
 	<!-- <div class="container-fluid">
 	<div class="row">
 	 	<div class="col-sm-3 col-md-3">
