--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
 		</div>
 		<div style="position: fixed;bottom: 0%">
           <div class="container">
-      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
+      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2017 Copyright Text</p>
+          </div>
+        </div>
+        <div style="position: fixed;top: : 0%">
+          <div class="container">
+      		<p><a href="">Button 1</a> <a href=""> Button 2</a> <a href="">Button 3</a></p>
           </div>
         </div>
 	</div>
@@ -148,7 +153,7 @@
 		</div>
 		<div style="position: fixed;bottom: -100%">
           <div class="container">
-      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
+      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2017 Copyright Text</p>
           </div>
         </div>
 	</div>
@@ -238,7 +243,7 @@
 		</div>
 		<div style="position: fixed;bottom: -200%">
           <div class="container">
-      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
+      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2017 Copyright Text</p>
           </div>
         </div>
 	</div>
@@ -302,7 +307,7 @@
 </div>
 		<div style="position: fixed;bottom: -300%">
           <div class="container">
-      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
+      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2017 Copyright Text</p>
           </div>
         </div>
 </div>
@@ -314,7 +319,7 @@
 		</div>
 		<div style="position: fixed;bottom: -400%">
           <div class="container">
-      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2014 Copyright Text</p>
+      		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2017 Copyright Text</p>
           </div>
         </div>
 </div>
