--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       		<p>Email <a href="mailto:sanaiqbal321@gmail.com?Subject=Chaturbate" class="nice-link">sanaiqbal321@gmail.com</a> Twitter © 2017 Copyright Text</p>
           </div>
         </div>
-        <div style="position: fixed;top: : 0%">
+        <div style="position: fixed;top: 0%">
           <div class="container">
       		<p><a href="">Button 1</a> <a href=""> Button 2</a> <a href="">Button 3</a></p>
           </div>
