--- a/index.html
+++ b/index.html
@@ -48,29 +48,8 @@
 		 </style>
 </head>
 <body>
-<header class="main_h">
 
-    <div class="row">
-        <a class="logo" href="#">P/F</a>
-
-        <div class="mobile-toggle">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
-
-        <nav>
-            <ul>
-                <li><a href=".sec01">Section 01</a></li>
-                <li><a href=".sec02">Section 02</a></li>
-                <li><a href=".sec03">Section 03</a></li>
-                <li><a href=".sec04">Section 04</a></li>
-            </ul>
-        </nav>
-
-    </div> <!-- / row -->
-
-</header>
+    
 <div id="fullpage">
 	<div class="section active" id="section0">
 		<h1>Hi</h1>
@@ -89,7 +68,7 @@
         </div>
         <div style="position: fixed;top: 0%">
           <div class="container">
-      		<p><a href="">Button 1</a> <a href=""> Button 2</a> <a href="">Button 3</a></p>
+      		<p><a href="#section0">Button 1</a> <a href="#section1"> Button 2</a> <a href="#section2">Button 3</a></p>
           </div>
         </div>
 	</div>
