--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
         <div style="position: fixed;top: 0%">
           <div class="container">
-      		<p><a href="#section0">Button 1</a> <a href="#section1"> Button 2</a> <a href="#section2">Button 3</a></p>
+      		<p><a href="#section0">Home</a> <a href="#section1"> Best Work</a> <a href="#section2">More Work</a> <a href="#section3"> Modding</a> <a href="#section4">Your Profile</a></p>
           </div>
         </div>
 	</div>
